--- a/libafl/Cargo.toml
+++ b/libafl/Cargo.toml
@@ -47,6 +47,9 @@ num_cpus = "^1.6.2" # cpu count, for llmp example
 serial_test = "0.5"
 
 [dependencies]
+walkdir = "2.3.2"
+rand = "0.8.5"
+rmp-serde = "1.1.0"
 libafl_derive = { version = "0.7.1", optional = true, path = "../libafl_derive" }
 
 rustversion = "1.0"
