--- a/fuzzers/forkserver_simple/Cargo.toml
+++ b/fuzzers/forkserver_simple/Cargo.toml
@@ -1,21 +1,6 @@
-[package]
-name = "forkserver_simple"
-version = "0.7.1"
-authors = ["tokatoka <tokazerkje@outlook.com>"]
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-lto = true
-codegen-units = 1
-opt-level = 3
-
-[dependencies]
-libafl = { path = "../../libafl/" }
-clap = { version = "3.1", features = ["default"] }
-nix = "0.23"
+members = [
+    "splitter-bundler",
+    "fuzzer",
+]
